<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactsManager</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="Telephone">Telephone</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="ShowAdditionalFields">ShowAdditionalFields</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
