<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.lab04.contactsmanager.ContactsManagerActivity" >

	<RelativeLayout
	    android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    
	    <Button
	        android:id="@+id/showAdditionalFields"
	        android:layout_width="match_parent"
	     	android:layout_height="wrap_content"
	     	android:text="@string/ShowAdditionalFields"/>
	    
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Name"
            android:layout_below="@id/showAdditionalFields"
            android:inputType="text"/>

        <EditText
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:gravity="center"
            android:inputType="phone"
            android:layout_below="@id/name"
            android:text="@string/Telephone" />

        
		<EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:layout_below="@id/telephone"
            android:text="@string/Email" />
       
		<EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/email"
            android:text="@string/Address"
            android:inputType="text" />

	    <GridLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_below="@+id/address"
	        android:rowCount="1"
	        android:columnCount="3" >        
	    
		    <Button
		        android:id="@+id/save_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="@+id/cancel_button"
		        android:layout_gravity="center_horizontal"
		        android:layout_row="0"
		        android:layout_column="0"
		        android:text="@string/save" />
		    
		    <Space
		        android:layout_width="20dp"
		        android:layout_height="wrap_content"
		        android:layout_row="0"
	            android:layout_column="1" />
		    
		    <Button
		        android:id="@+id/cancel_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="@+id/save_button"
		        android:layout_gravity="center_horizontal"
	            android:layout_row="0"
	            android:layout_column="2"
		        android:text="@string/cancel" />
	    
	    </GridLayout>

        
    </RelativeLayout>
    
    <FrameLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_above="@+id/topContainer">

        <EditText
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Name" android:inputType="text"/>

        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/IM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Name" />
    </FrameLayout>

</RelativeLayout>